fixed text spacing by adding line-height. added some margin and space in general. most importantly, mobile doesnt look like death now

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,11 @@
 }
 
 * {
+    
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+
 }
 
 /* Link information */
@@ -38,12 +40,6 @@ a:active {
     border: 2px  var(--dark) solid;
     margin: 0px 15% 0px 15%
 }
-
-/* .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-} */
 
 .headerData {
     display: flex;
@@ -185,6 +181,9 @@ a:active {
 .center {
     display: flex;
     justify-content: center; 
+    margin: 5px;
+    line-height: 1.6;
+
 }
 
 /* Misc Classes */
@@ -222,6 +221,9 @@ a:active {
         align-items: center;
         flex-direction: column;
     }
+    .devGrid {
+        grid-template-columns: 1fr;
+    }
 }
 
 
@@ -234,8 +236,7 @@ flex-direction: column;
 .outer{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+    flex-direction: column;    
 }
 
 .center2 {
@@ -265,4 +266,9 @@ flex-direction: column;
 
 .txt {
     font-weight: 300;
+    
+}
+
+div {
+    line-height: 1.6;
 }
